--- a/src/Pages/Allevents/Allevents.css
+++ b/src/Pages/Allevents/Allevents.css
@@ -1,4 +1,22 @@
 .my-coustom{
     height: 250px;
     width: 100%;
+    transition: transform 1000ms;
+    
+}
+.overflow{
+    overflow: hidden;
+}
+.my-coustom:hover{
+    transform:scale(1.1);
+    opacity: 0.7;
+    
+}
+.card-color{
+   
+}
+.card-color :hover{
+    
+    background-color: rgb(29, 131, 109);
+    /* transform: translateY(-10px); */
 }
