--- a/src/Pages/Allevents/Allevents.css
+++ b/src/Pages/Allevents/Allevents.css
@@ -7,16 +7,14 @@
 .overflow{
     overflow: hidden;
 }
-.my-coustom:hover{
+.div1{ 
+    transition: width 2s, height 2s, background-color 1s, transform 2s;
+}
+.div1:hover{
+    background-color: green;
+    /* width: 500px; */
+}
+.div1:hover .my-coustom{
     transform:scale(1.1);
     opacity: 0.7;
-    
-}
-.card-color{
-   
-}
-.card-color :hover{
-    
-    background-color: rgb(29, 131, 109);
-    /* transform: translateY(-10px); */
 }
