--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -8,3 +8,22 @@
     text-decoration: none;
     margin-bottom: 20px;
 }
+
+.footer-link{
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    display: inline-block;
+    transition: background-color 1s, transform 2s;
+}
+
+.footer-link:hover{
+    background-color: #FF2A7E;
+    transform: scale(1.1);
+    border-radius: 10%;
+}
+
+.footer-img{
+    width: 80px;
+    height: 60px;
+}
