--- a/src/Pages/AddEvent/AddEvent.css
+++ b/src/Pages/AddEvent/AddEvent.css
@@ -6,9 +6,7 @@
     
 }
 
-.form{
-    border: 4px solid green;
-}
+
 
 .add-services form input, textarea{
     width: 40%;
@@ -22,3 +20,13 @@
 .event-name{
     color: green;
 }
+
+@media only screen and (max-width: 600px) {
+    .add-services form input, textarea{
+        width: 100%;
+        
+    }
+    .add-services{
+        padding: 15px;
+    }
+  }
