--- a/src/Pages/Achivement/Achivement.css
+++ b/src/Pages/Achivement/Achivement.css
@@ -3,7 +3,8 @@
     padding: 10px;
     border-radius: 10px;
     height: 200px;
-    width: 300px;margin-bottom: 10px;
+    width: 300px;
+    margin-bottom: 10px;
 
 }
 
