--- a/src/Pages/Home_page/Banner/Banner.css
+++ b/src/Pages/Home_page/Banner/Banner.css
@@ -1,4 +1,12 @@
 .img-style{
-    height: 600px;
-    
+    height: 600px;  
 }
+
+@media only screen and (max-width: 600px) {
+    .img-style{
+        height: 250px;  
+    }
+    .carousel-title{
+        display: none;
+    }
+  }
